feat: add consultants service
